# txdo

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md
benches/: README.md  parse.rs  sample.txt
src/: lib.rs  matchers.rs
txdo/: Cargo.toml
txdo-cli/: Cargo.toml
txdo/src/: lib.rs  matchers.rs
